No Ticket - UI Issue - Tighten up spacing below Estimated Total box in Order summary [check both logged in and not logged in users]

--- a/src/InsiteCommerce.Web/Themes/nationalbusinessfurniture/Styles/custom/cart.scss
+++ b/src/InsiteCommerce.Web/Themes/nationalbusinessfurniture/Styles/custom/cart.scss
@@ -175,7 +175,7 @@
 
     .confidence-box {
         border: 1px solid $divider-gray;
-        padding: 2em;
+        padding: 1.7em;
         margin-bottom: 1.5em;
 
         &__title {
